[gd_scene load_steps=2 format=3 uid="uid://baeo8tirve5fm"]

[ext_resource type="Script" uid="uid://22fvmdjbtgmn" path="res://Scripts/Tests/debugger_buttons.gd" id="1_61s5s"]

[node name="Debugger" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 482.0
offset_top = -224.0
offset_right = 522.0
offset_bottom = -184.0
grow_vertical = 2
script = ExtResource("1_61s5s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -10.875
anchor_top = 2.225
anchor_right = -5.725
anchor_bottom = 9.875
offset_left = 3.05176e-05
offset_right = 1.52588e-05

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StopWavesButton" type="Button" parent="Panel/VBoxContainer"]
z_index = 2
layout_mode = 2
text = "STOP waves"

[node name="StartWavesButton" type="Button" parent="Panel/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Start waves"

[node name="HARD stats" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "start HARD PlayerStats"

[node name="reset player stats" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "reset PlayerStats"

[node name="Free money" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "FREE MONEY"

[connection signal="button_down" from="Panel/VBoxContainer/StopWavesButton" to="." method="_on_stop_waves_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/StartWavesButton" to="." method="_on_start_waves_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/HARD stats" to="." method="_on_hard_stats_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/reset player stats" to="." method="_on_reset_player_stats_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Free money" to="." method="_on_free_money_button_down"]
